syntax = "proto3";
option java_multiple_files = true;
package com.helphi.question.api.grpc;

import "types/answer.proto";
import "google/protobuf/timestamp.proto"; 

message Question {
    int64 questionId = 1;
    string conditionId = 2;
    string questionType = 3;
    repeated string possibleAnswers = 4;
    repeated int32 answerScoreRange = 5;
    repeated int32 answerScore = 6;
}

message QuestionRequest {
    string conditionId = 1;
    string QuestionType = 2;
    repeated string possibleAnswers = 3;
    repeated int32 answerScoreRange = 4;
    repeated int32 answerScore = 5;
}